create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2144,26 +2144,26 @@ body {
 .cid-qNRFEeZoMY .mbr-section-btn {
   text-align: left;
 }
-.cid-qO0kR6yeaB {
+.cid-qO0UIFCVPl {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #767676;
+  background-color: #f8f8f8;
 }
-.cid-qO0kR6yeaB .mbr-section-subtitle {
+.cid-qO0UIFCVPl .mbr-section-subtitle {
   color: #767676;
   text-align: center;
   font-weight: 300;
 }
-.cid-qO0kR6yeaB .timeline-text-content {
+.cid-qO0UIFCVPl .timeline-text-content {
   padding: 2rem 2.5rem;
-  background: #cc2952;
+  background: #e7e7e7;
   margin-right: 2rem;
   transition: all .4s;
 }
-.cid-qO0kR6yeaB .timeline-text-content p {
+.cid-qO0UIFCVPl .timeline-text-content p {
   margin-bottom: 0;
 }
-.cid-qO0kR6yeaB .timeline-element {
+.cid-qO0UIFCVPl .timeline-element {
   margin-bottom: 50px;
   position: relative;
   word-wrap: break-word;
@@ -2172,19 +2172,19 @@ body {
   flex-direction: row;
   -webkit-flex-direction: row;
 }
-.cid-qO0kR6yeaB .timeline-element:hover .timeline-text-content {
+.cid-qO0UIFCVPl .timeline-element:hover .timeline-text-content {
   box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
   transition: all .4s;
 }
-.cid-qO0kR6yeaB .reverse {
+.cid-qO0UIFCVPl .reverse {
   flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
 }
-.cid-qO0kR6yeaB .reverse .timeline-text-content {
+.cid-qO0UIFCVPl .reverse .timeline-text-content {
   margin-left: 2rem;
   margin-right: 0;
 }
-.cid-qO0kR6yeaB .iconsBackground {
+.cid-qO0UIFCVPl .iconsBackground {
   position: absolute;
   left: 50%;
   width: 60px;
@@ -2193,11 +2193,11 @@ body {
   text-align: center;
   border-radius: 50%;
   display: inline-block;
-  background-color: #cc2952;
+  background-color: #e7e7e7;
   top: 20px;
   margin-left: -30px;
 }
-.cid-qO0kR6yeaB .mbr-iconfont {
+.cid-qO0UIFCVPl .mbr-iconfont {
   position: absolute;
   text-align: center;
   font-size: 35px;
@@ -2206,31 +2206,122 @@ body {
   top: 13px;
   left: 13px;
 }
-.cid-qO0kR6yeaB .separline:before {
+.cid-qO0UIFCVPl .separline:before {
   top: 20px;
   bottom: 0;
   position: absolute;
   content: "";
   width: 2px;
-  background-color: #cc2952;
+  background-color: #e7e7e7;
   left: calc(50% - 1px);
   height: calc(100% + 4rem);
 }
 @media (max-width: 768px) {
-  .cid-qO0kR6yeaB .iconsBackground {
+  .cid-qO0UIFCVPl .iconsBackground {
     left: 1.5rem;
   }
-  .cid-qO0kR6yeaB .separline:before {
+  .cid-qO0UIFCVPl .separline:before {
     left: calc(1.5rem - 1px);
   }
-  .cid-qO0kR6yeaB .timeline-text-content {
+  .cid-qO0UIFCVPl .timeline-text-content {
     margin-left: 3rem !important;
     margin-right: 0 !important;
   }
-  .cid-qO0kR6yeaB .reverse .timeline-text-content {
+  .cid-qO0UIFCVPl .reverse .timeline-text-content {
     margin-right: 0 !important;
   }
 }
-.cid-qO0kR6yeaB .mbr-section-title {
-  color: #c1c1c1;
+.cid-qO15eEWB8A {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qO15eEWB8A .mbr-iconfont {
+  font-size: 48px;
+  padding-right: 1rem;
+}
+.cid-qO15eEWB8A .input {
+  margin-bottom: 15px;
+}
+.cid-qO15eEWB8A .map {
+  width: 100%;
+  height: 30rem;
+}
+.cid-qO15eEWB8A .map iframe {
+  width: inherit;
+  height: 100%;
+}
+.cid-qO15eEWB8A .icon-block {
+  margin-bottom: 10px;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-qO15eEWB8A .icon-block .icon-block__icon {
+  display: inline-block;
+  flex-shrink: 0;
+  -webkit-flex-shrink: 0;
+}
+.cid-qO15eEWB8A .icon-block .icon-block__title {
+  display: inline-block;
+  align-self: center;
+  -webkit-align-self: center;
+  margin-bottom: 0;
+  line-height: 1;
+  font-style: italic;
+}
+.cid-qO15eEWB8A .mbr-text {
+  color: #767676;
+}
+.cid-qO15eEWB8A a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-qO15eEWB8A .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-qO15eEWB8A .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-qO15eEWB8A .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-qO15eEWB8A .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-qO15eEWB8A .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-qO15eEWB8A .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-qO15eEWB8A .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+@media (max-width: 767px) {
+  .cid-qO15eEWB8A h2 {
+    padding-top: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .cid-qO15eEWB8A .container > .row > .col-md-6:first-child {
+    padding-right: 30px;
+  }
+  .cid-qO15eEWB8A .container > .row > .col-md-6:last-child {
+    padding-left: 30px;
+  }
 }
